# dat250-2024-assignment

./: .flaskenv  .git-blame-ignore-revs  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  social_insecurity.py
social_insecurity/: __init__.py  config.py  database.py  forms.py  routes.py  schema.sql  sessions_handler.py
social_insecurity/templates/: alert.html.j2  base.html.j2  comments.html.j2  friends.html.j2  index.html.j2  profile.html.j2  stream.html.j2
tests/: test_routes.py
